--- a/Front_End/weather-app/public/style.css
+++ b/Front_End/weather-app/public/style.css
@@ -1,106 +1,95 @@
-  * {
-    margin: 0;
-    padding: 0;
-  }
+* {
+	margin: 0;
+	padding: 0;
+}
 
-  html {
-    font: 1rem/1.3 "Calibri", sans-serif;
-    background-image: url('https://i.gifer.com/IB30.gif');
-    height: 100%;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-  }
+html {
+	font: 1rem/1.3 "Calibri", sans-serif;
+	background-image: url('https://i.gifer.com/IB30.gif');
+	height: 100%;
+	background-position: center;
+	background-repeat: no-repeat;
+	background-size: cover;
+}
 
-  button {
-    cursor: pointer;
-  }
 
-  button, input {
-    border: none;
-    background: none;
-    outline: none;
-    background-color: white;
-  }
 
-  img {
-    display: block;
-    max-width: 100%;
-    height: auto;
-  }
+button, input {
+	border: none;
+	background: none;
+	outline: none;
+  background-color: white;
+  height: 40px;
+  margin: 1%;
+}
 
-  body {
-    color: var(--text_dark);
-    padding: 50px;
-  }
+button {
+  cursor: pointer;
+  border:  1px solid black;
+  padding: 1%;
+}
 
-  .heading {
-    font-weight: bold;
-    font-size: 4rem;
-    letter-spacing: 0.02em;
-    padding: 0 0 30px 0;
-  }
+img {
+	display: block;
+	max-width: 100%;
+	height: auto;
+}
 
-  .top-banner form {
-    position: relative;
-    display: flex;
-    align-items: center;
-  }
 
-  .top-banner form input {
-    font-size: 2rem;
-    height: 40px;
-    padding: 5px 5px 10px;
-    border-bottom: 1px solid;
-  }
+.heading {
+	font-weight: bold;
+	font-size: 4rem;
+	letter-spacing: 0.02em;
+	padding: 0 0 30px 0;
+}
 
-  .top-banner form input::placeholder {
-    color: currentColor;
-  }
+.detailedDay {
+	display: block;
+	margin-left: auto;
+	margin-right: auto;
+	width: 50%;
+	border: 3px solid black;
+	border-radius: 10px;
+	font-size: 20px;
+	padding: 20px;
+}
 
-  .top-banner form button {
-    font-size: 1rem;
-    font-weight: bold;
-    letter-spacing: 0.1em;
-    padding: 15px 20px;
-    margin-left: 15px;
-    border-radius: 5px;
-    background: lightblue;
-    transition: background 0.3s ease-in-out;
-  }
+.detailedDay img {
+	display: block;
+	margin-left: auto;
+	margin-right: auto;
+}
 
-  .top-banner form button:hover {
-    background: white;
-  }
+.detailedDay .currentWeatherBlock {
+	display: block;
+	margin-left: auto;
+	margin-right: auto;
+	text-align: center;
+}
 
-  .top-banner form .msg {
-    position: absolute;
-    bottom: -40px;
-    left: 0;
-    max-width: 450px;
-    min-height: 40px;
-  }
+.errorPage {
+	text-align: center;
+}
 
-  .detailedDay{
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    width: 50%;
-    border: 3px solid black;
-    border-radius: 10px;
-    font-size: 20px;
-    padding: 20px;
-  }
+.errorPage img {
+	display: block;
+	margin-left: auto;
+	margin-right: auto;
+}
 
-  .detailedDay img{
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-  }
+.errorPage h1 {
+	font-size: 300%;
+}
 
-  .detailedDay .currentWeatherBlock{
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    text-align: center;
-  }
+.zipDiv{
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
+}
+
+.zipDiv>*{
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
